--- a/views/messages.erb
+++ b/views/messages.erb
@@ -17,7 +17,8 @@
       %>
 
       <div class="message">
-        <!-- <a href="" class="close"></a> -->
+        <div class="to">
+        </div>
         <div class="from">
         </div>
         <div class="content">
