--- a/views/messages.erb
+++ b/views/messages.erb
@@ -10,23 +10,24 @@
 
     <div id="message-stream">
       <%
-        # for each message in @messages
-        # render the template below
-        # filling the content from
-        # the message
+        @messages.each do |message|
       %>
 
       <div class="message">
         <div class="to">
+          <%= message.to %>
         </div>
         <div class="from">
+          <%= message.from %>
         </div>
         <div class="content">
+          <%= message.content %>
         </div>
         <div class="time">
+          <%= message.created_at %>
         </div>
       </div>
-
+    <% end %>
     </div>
   </body>
 </html>
